<resources>
    <string name="app_name">OurCw</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="student_id">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="student_desc">salam this is for description of our student accesses</string>
    <string name="teacher_desc">hi this is description of teacher accounts accesses</string>
    <string name="university">University</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="login_successful_message">Successfully login</string>
    <string name="login_failed_message">failed login</string>
    <string name="once_login_error_message">\"you loginned as \"</string>
    <string name="last_name">Last name</string>
</resources>