<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentRegistrationActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_pink">

    <EditText
        android:id="@+id/studentUsernameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/studentPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/studentFirstNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/studentLastNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/studentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/studentRegisterButtonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:cornerRadius="25dp" />

    <Button
        android:id="@+id/studentBackLoginButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:cornerRadius="25dp" />
</LinearLayout>