<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StudentLogin.StudentLoginFragment"
    android:orientation="vertical">


    <EditText
        android:id="@+id/studentLoginUsernameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/studentLoginPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/studentLoginButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/studentRegistrationButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

    <EditText
        android:id="@+id/studentAccountDescId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="salam this is for description of our student accesses" />
</LinearLayout>