<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TeacherLogin.TeacherLoginFragment">

    <EditText
        android:id="@+id/editTextTeacherUsernameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordTeacherId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/teacherLoginButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/teacherCreateAccountButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

    <EditText
        android:id="@+id/teacherAccountDescId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="hi this is description of teacher accounts accesses" />
</LinearLayout>