<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_blue">


    <EditText
        android:id="@+id/loginUsernameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA681DEF"
        android:text="@string/login"
        app:cornerRadius="25dp" />

    <Button
        android:id="@+id/navToRegistrationStudentButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA681DEF"
        android:text="Register Student"
        app:cornerRadius="25dp" />

    <Button
        android:id="@+id/navToRegistrationTeacherButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FA681DEF"
        android:text="Register Teacher"
        app:cornerRadius="25dp" />

</LinearLayout>