<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentAssignmentPageActivity"
    android:background="@drawable/gradient_background_light_pink">

    <EditText
        android:id="@+id/assignmentNameId"
        android:layout_width="225dp"
        android:layout_height="49dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B9FFFFFF"
        android:ems="10"
        android:hint="@string/assignment_name"
        android:inputType="textLongMessage|number|textPersonName|text"
        android:rotationX="-6"
        android:shadowColor="#B4E8E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/assignmentAnswerId"
        android:layout_width="224dp"
        android:layout_height="126dp"
        android:background="#CDFFFFFF"
        android:backgroundTint="#B7FFFFFF"
        android:hint="Assignment Answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignmentNameId"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/submitAnsBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:backgroundTint="#FFE37171"
        android:shadowColor="#F87474"
        android:text="@string/submit"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignmentAnswerId"
        app:rippleColor="#F8F5F5"/>

    <Button
        android:id="@+id/deleteAnsBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E37171"
        android:text="@string/delete"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignmentAnswerId" />

    <Button
        android:id="@+id/editAnsBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFE37171"
        android:text="@string/edit"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteAnsBtnId"
        app:layout_constraintStart_toEndOf="@+id/submitAnsBtnId"
        app:layout_constraintTop_toBottomOf="@+id/assignmentAnswerId" />

    <ImageButton
        android:id="@+id/closeAssignmentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/assignmentScoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CABCBC"
        android:ems="10"
        android:hint="Score"
        android:inputType="numberSigned|number|text|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAnsBtnId"
        app:layout_constraintVertical_bias="0.17000002" />

</androidx.constraintlayout.widget.ConstraintLayout>